# MultiSOCIAL_toolbox

./: .Rhistory  .gitignore  DEPLOYMENT.md  DESIGN.md  LICENSE  MultiSOCIAL.spec  README.md  app.py  audio.py  env.example  pose.py  pyproject.toml  requirements.txt  run_app.bat  run_app.sh
.github/scripts/: validate_complete_bundle_layout.py
.github/workflows/: release.yml
R_scripts/: 01-data_preparation-toolbox.R  01a-parallel_data_prep-toolbox.R  02-data_weaving-toolbox.R  03-crqa-toolbox.R  03a-parallel_crqa-toolbox.R  04-plot-toolbox.R
assets/: MultiSOCIAL_logo.icns
batch_processing_pose/: instructions.txt  pose_extract.py
batch_processing_pose/output/: 2502_CoopLego_All_video_person_1.csv  2502_CoopLego_All_video_person_2.csv  2503_CoopLego_All_video_person_1.csv
hooks/: hook-yolov5.py
src/: app.py  audio.py  captions.py  gui_utils.py  pose.py  runtime_hook_dlls.py  runtime_services.py  ui_components.py  verify_pose_embedding.py
src/backports/: __init__.py  tarfile.py
tests/: conftest.py  test_app_caption_gating.py  test_app_output_paths.py  test_app_transcript_outcomes.py  test_audio.py  test_captions.py  test_gui_utils.py  test_launchers.py  test_packaging_metadata.py  test_pose.py  test_release_workflow.py  test_runtime_services.py  test_ui_responsiveness.py  test_validate_complete_bundle_layout.py  test_verify_pose_embedding.py  test_windows_complete_packaging.py
